--- a/client/src/Components/Styles/RegisterLogin.css
+++ b/client/src/Components/Styles/RegisterLogin.css
@@ -45,19 +45,6 @@
 :focus {outline: none;
 }
 
-body {
-  background:
-    -webkit-linear-gradient(
-    rgba(246,247,249,0.65),
-    rgba(246,247,249,0.65)),
-    url(https://img5.goodfon.ru/wallpaper/nbig/7/10/les-doroga-luchi-solntsa.jpg) no-repeat center center fixed;
-  /* background:
-    linear-gradient(
-    rgba(246,247,249,0.8),
-    rgba(246,247,249,0.8)),
-    url(https://img5.goodfon.ru/wallpaper/nbig/7/10/les-doroga-luchi-solntsa.jpg) no-repeat center center fixed;
-  background-size: cover; */
-}
 
 .frame {
   height: 575px;
@@ -67,20 +54,21 @@ body {
     rgba(35,43,85,0.75),
     rgba(35,43,85,0.95)); */
     /* url(https://dl.dropboxusercontent.com/u/22006283/preview/codepen/clouds-cloudy-forest-mountain.jpg) no-repeat center center; */
-  background:
-    linear-gradient(
+  /* background: */
+  background-color: rgba(0, 0, 0, 0.5);
+    /* linear-gradient(
     rgba(47, 85, 35, 0.75),
-    rgba(23, 43, 17, 0.75));
+    rgba(23, 43, 17, 0.75)); */
     /* url(https://dl.dropboxusercontent.com/u/22006283/preview/codepen/clouds-cloudy-forest-mountain.jpg) no-repeat center center; */
   background-size: cover;
-  margin-left: auto;
-  margin-right: auto;
-  border-top: solid 1px rgba(255,255,255,.5);
-  border-radius: 5px;
-  box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
+  margin: 10px auto;
+  /* border-top: solid 1px rgba(255,255,255,.5); */
+  /* border-radius: 5px; */
+  /* box-shadow: 0px 2px 7px rgba(0,0,0,0.2); */
   overflow: hidden;
   -webkit-transition: all .5s ease;
-  transition: all .5s ease;
+  /* transition: all .5s ease; */
+  border: none;
 
   
 }
