--- a/client/src/Components/Styles/AddForm.css
+++ b/client/src/Components/Styles/AddForm.css
@@ -17,10 +17,10 @@
   -webkit-transition: all .5s ease;
   border: none;
   border-radius: 10px;
+  border: 3px solid  rgba(255, 0, 0, 0.712);
 }
 
 .add-form_label_input{
-  width: 93%;
   height: 35px;
 	border: none;
 	border-radius: 20px;
@@ -30,6 +30,33 @@
   color: #ffffff;
   font-size: 13px;
   padding: 2px 15px;
+  font-family: monospace;
+}
+
+.add-form_option{
+  padding:0 30px 0 10px;
+  background:  rgba(0, 0, 0, 0.5);
+  position:absolute;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.add-form_select{
+  font-family: monospace;
+  background:rgba(255,255,255,.2);
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+.add-form_cat_option{
+  color: #ffffffa2;
+
+}
+
+::placeholder{
+  color: #ffffffa2;
 }
 
 .add-form_button{
@@ -42,22 +69,17 @@
   text-transform: uppercase;
   font-size: 13px;
   text-align: center;
-  background-color: #cfe2cfc4;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #e9eef2be;
+  font-family: monospace;
   margin-top: 10px;
   margin-bottom: 20px;
-  color: #0a2b0ac4;
+  color:  rgba(255, 0, 0, 0.712);
 }
 
 .add-form_button:hover {
   cursor: pointer; 
-  background-color: #2a3128b0;
+  background-color: rgba(255, 0, 0, 0.712);
   color: #cfe2cfc4;
   transition: all .5s; 
 }
-.add-form_button:not(:hover) {
-  cursor: pointer; 
-  background-color: #cfe2cfc4;
-  color: #0a2b0ac4;
-  transition: all .5s;
-}
+
