--- a/client/src/Components/Styles/NavBar.css
+++ b/client/src/Components/Styles/NavBar.css
@@ -18,6 +18,12 @@ border: none;
   border: none;
   font-family: monospace;
 
-  color: rgba(255, 255, 255, 0.90);
+  color: #e9eef2be;
   font-size: 30px;
+}
+
+
+.navlink-button:hover{
+  color: rgba(255, 0, 0, 0.712);
+  transition: all .3s;
 }
