--- a/client/src/Components/Styles/NavBar.css
+++ b/client/src/Components/Styles/NavBar.css
@@ -1,7 +1,7 @@
 nav {
-  position: fixed;
-  top: 0px;
-  left: 0px;
+position: fixed;
+top: 0px;
+left: 0px;
 width: 100%;
 height: 55px;
 background-color: rgba(0, 0, 0, 0.5);
@@ -17,7 +17,7 @@ border: none;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   font-family: monospace;
-
+  text-decoration: none;
   color: #e9eef2be;
   font-size: 30px;
 }
@@ -27,3 +27,7 @@ border: none;
   color: rgba(255, 0, 0, 0.712);
   transition: all .3s;
 }
+
+.navlink-button:active{
+  color: rgba(255, 0, 0, 0.712);
+} 
