--- a/client/src/Components/Styles/RegisterLogin.css
+++ b/client/src/Components/Styles/RegisterLogin.css
@@ -30,7 +30,7 @@
   padding-bottom: 10px;
   color: rgba(255,255,255,.7);
   display: block;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: monospace;
 }
 
 :focus {outline: none;
@@ -43,7 +43,6 @@
   background-color: rgba(0, 0, 0, 0.5);
   margin: 10px auto;
   overflow: hidden;
-  -webkit-transition: all .5s ease;
   border: none;
   border-radius: 10px;
 }
@@ -58,26 +57,19 @@
   text-transform: uppercase;
   font-size: 13px;
   text-align: center;
-  background-color: #cfe2cfc4;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #e9eef2be;
+  font-family: monospace;
   margin-top: 10px;
   margin-bottom: 20px;
-  color: #0a2b0ac4;
+  color:  rgba(255, 0, 0, 0.712);
 }
 
 .form-auth_button:hover {
   cursor: pointer; 
-  background-color: #2a3128b0;
+  background-color: rgba(255, 0, 0, 0.712);
   color: #cfe2cfc4;
   transition: all .5s; 
 }
-.form-auth_button:not(:hover) {
-  cursor: pointer; 
-  background-color: #cfe2cfc4;
-  color: #0a2b0ac4;
-  transition: all .5s;
-}
-
 
 .form-auth_header{
   font-weight: 400;
@@ -86,5 +78,5 @@
   margin-top: 0px;
   padding-bottom: 10px;
   color: rgba(255,255,255,.7);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: monospace;
 }
