--- a/client/src/Components/Styles/CatExpenses.css
+++ b/client/src/Components/Styles/CatExpenses.css
@@ -57,6 +57,7 @@ margin: 0px;
   border-radius: 3px;
   padding: 5px;
   background-color: rgba(255, 0, 0, 0.137);
+  white-space: pre-line;
 }
 
 .modal_button{
